# 202604-syntheticdata-survey

./: .gitignore  README.md  run_grid.sh
.claude/agents/: review-config-management.md  review-documentation.md  review-experiment-execution.md  review-experiment-management.md  review-interpretation.md  review-test-quality.md  review-uiux-quality.md
docs/: process.md  report.md  rerun.md  review.md  spec.md
docs/tasks/: 01-investigation.md  02-common-interface.md  03-preprocessing.md  04-runners.md  05-evaluation.md  06-experiment-execution.md  07-visualization.md  08-report.md  README.md
docs/templates/: kickoff_checklist.md  (+1 more)
experiments/: README.md
experiments/mst_dpmm/: README.md  pyproject.toml
experiments/mst_dpmm/results/: run_mst_dpmm_0.3_0.json  run_mst_dpmm_0.3_1.json  run_mst_dpmm_1.0_0.json  run_mst_dpmm_1.0_1.json  run_mst_dpmm_3.0_0.json  run_mst_dpmm_3.0_1.json
experiments/mst_dpmm/src/: runner.py  wrapper.py
experiments/mst_private_pgm/: README.md  pyproject.toml
experiments/mst_private_pgm/results/: run_mst_private_pgm_0.3_0.json  run_mst_private_pgm_0.3_1.json  run_mst_private_pgm_1.0_0.json  run_mst_private_pgm_1.0_1.json  run_mst_private_pgm_3.0_0.json  run_mst_private_pgm_3.0_1.json
experiments/mst_private_pgm/src/: runner.py  wrapper.py
experiments/mst_smartnoise/: README.md  pyproject.toml
experiments/mst_smartnoise/results/: run_mst_smartnoise_0.3_0.json  run_mst_smartnoise_0.3_1.json  run_mst_smartnoise_1.0_0.json  run_mst_smartnoise_1.0_1.json  run_mst_smartnoise_3.0_0.json  run_mst_smartnoise_3.0_1.json
experiments/mst_smartnoise/src/: runner.py  wrapper.py
results/: performance_metrics.csv  privacy_metrics.csv  summary.csv  utility_metrics.csv
(+14 files in other folders)
